--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,8 @@
     ],
     "types": [
       "vite/client",
+      "vuepress-vite",
+      "vuepress/config"
     ],
     "paths": {
       "@packages/*": [
@@ -39,6 +41,7 @@
     "packages/**/*.ts",
     "packages/**/*.d.ts",
     "packages/**/*.tsx",
-    "packages/**/*.vue"
+    "packages/**/*.vue",
+    "docs/**/*.ts"
   ]
 }
